# ai_debate

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE-MIT  README.md  system_prompt.txt
src/: chat.cpp  chat.h  chunk_processor.cpp  chunk_processor.h  gpt_client.cpp  main.cpp
src/api_client/: api_client.cpp  api_client.h  api_client_factory.h  api_error.h  api_stream_handler.cpp  api_stream_handler.h  claude_chunk_processor.cpp  claude_chunk_processor.h  claude_request_maker copy.cpp  claude_request_maker.cpp  claude_request_maker.h  gemini_chunk_processor.cpp  gemini_chunk_processor.h  gemini_request_maker.cpp  gemini_request_maker.h  gpt_chunk_processor.cpp  gpt_chunk_processor.h  gpt_error.h  gpt_request_maker.cpp  gpt_request_maker.h  i_api_client.h  i_chunk_processor.h  i_request_maker.h
src/claude_client/: chunk_processor.cpp  chunk_processor.h  claude_client.cpp  claude_client.h  claude_error.h
src/gemini_client/: chunk_processor.cpp  gemini_client.cpp  gemini_client.h  gemini_error.h
src/gpt_client/: chunk_processor.cpp  gpt_client.cpp  gpt_client.h  gpt_error.h
src/util/: color_print.h  json_printer.cpp  json_printer.h  print_with_symbols.h  stacktrace.cpp  stacktrace.h  string_cleaner.cpp  string_cleaner.h
tests/: api_client_test.cpp  chunk_processor_test.cpp  string_cleaner_test.cpp  test_chunk_processor.h  test_request_maker.h
